Fixed a bug and exposed the ports

--- a/MongoDB/Dockerfile
+++ b/MongoDB/Dockerfile
@@ -1,6 +1,6 @@
 FROM buildpack-deps:bionic
 
-COPY ./ ./
+COPY create.js create.js
 
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 4B7C549A058F8B6B
 RUN echo "deb https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse" | tee /etc/apt/sources.list.d/mongodb-org.list
@@ -11,5 +11,7 @@ RUN mkdir -p /data/db
 RUN chmod 777 /data/db
 
 RUN mongod --fork --logpath /var/log/mongodb.log --bind_ip_all && sleep 10 && mongo < create.js && sleep 10
+
+EXPOSE 27017
 
 CMD ["mongod", "--bind_ip_all"]
